--- a/just studying/Test/Test/MyTableViewCell.xib
+++ b/just studying/Test/Test/MyTableViewCell.xib
@@ -9,22 +9,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="286" id="KGk-i7-Jjw" customClass="MyTableViewCell" customModule="Test" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="704" height="286"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="129" id="KGk-i7-Jjw" customClass="MyTableViewCell" customModule="Test" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="650" height="129"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="704" height="286"/>
+                <rect key="frame" x="0.0" y="0.0" width="650" height="129"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIv-Jf-sU1">
-                        <rect key="frame" x="10" y="10" width="684" height="143.33333333333334"/>
-                        <string key="text">Hello thi is title label Hello thi is title label Hello thi is title label Hello thi is title label Hello thi is title label Hello thi is title label Hello thi is title label Hello thi is title label Hello thi is title label</string>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIv-Jf-sU1">
+                        <rect key="frame" x="10" y="10" width="630" height="36"/>
                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhd-YN-Gh9">
-                        <rect key="frame" x="10" y="163.33333333333334" width="684" height="92.666666666666657"/>
+                        <rect key="frame" x="10" y="56" width="630" height="43"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -42,10 +41,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="my2ndTitleLableOnCell" destination="hhd-YN-Gh9" id="vfJ-S1-hJO"/>
-                <outlet property="myTitleLableOnCell" destination="hIv-Jf-sU1" id="Syq-YY-VbA"/>
+                <outlet property="myBodyLabel" destination="hhd-YN-Gh9" id="vfJ-S1-hJO"/>
+                <outlet property="myTitleLabel" destination="hIv-Jf-sU1" id="Syq-YY-VbA"/>
             </connections>
-            <point key="canvasLocation" x="271.75572519083971" y="104.22535211267606"/>
+            <point key="canvasLocation" x="229.00763358778624" y="48.943661971830991"/>
         </tableViewCell>
     </objects>
 </document>
